kubernetes/grafana/app/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: grafana
  name: grafana-alerting
  labels:
    app.kubernetes.io/part-of: grafana
    app.kubernetes.io/name: grafana-alerting
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: gossip-tcp
      protocol: TCP
      port: 9094
      targetPort: 9094
    - name: gossip-udp
      protocol: UDP
      port: 9094
      targetPort: 9094
  selector:
    app.kubernetes.io/name: grafana
